--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,4 +1,5 @@
 ---
+
 name: tests
 
 on: pull_request
@@ -9,8 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       # Get the version
-      # Artifact link
       - uses: ./
+        with:
+          version: '1.0.0'
 
 
     
