:sparkles: add github actions

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 ### SBOM ###
 
-artesca/artifacts/
-artesca/results/
+artesca/
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,python,visualstudiocode,linux,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,python,visualstudiocode,linux,windows
