:recycle: migrate to python

--- a/action.yaml
+++ b/action.yaml
@@ -35,6 +35,12 @@ inputs:
     required: false
     default: "/tmp/sbom"
 
+  vuln_report:
+    description: "Generate vulnerability report"
+    required: false
+    default: false
+    type: boolean
+
 runs:
   using: "composite"
   steps:
@@ -62,3 +68,11 @@ runs:
     - name: Run the scan
       shell: bash
       run: python3 ${{ github.action_path }}/src/main.py
+      with:
+        target: ${{ inputs.target }}
+        format: ${{ inputs.format }}
+        output_dir: ${{ inputs.output_dir }}
+        vuln_report: ${{ inputs.vuln_report }}
+        grype-version: ${{ inputs.grype-version }}
+        syft-version: ${{ inputs.syft-version }}
+        trivy-version: ${{ inputs.trivy-version }}
