:recycle: migrate to python

--- a/action.yaml
+++ b/action.yaml
@@ -47,6 +47,14 @@ runs:
 
     - name: Debug
       run: echo "Target: $INPUT_TARGET, Output Dir: $INPUT_OUTPUT_DIR"
+      env:
+        INPUT_TARGET: ${{ inputs.target }}
+        INPUT_FORMAT: ${{ inputs.format }}
+        INPUT_OUTPUT_DIR: ${{ inputs.output_dir }}
+        INPUT_VULN_REPORT: ${{ inputs.vuln_report }}
+        INPUT_GRYPE_VERSION: ${{ inputs['grype-version'] }}
+        INPUT_SYFT_VERSION: ${{ inputs['syft-version'] }}
+        INPUT_TRIVY_VERSION: ${{ inputs['trivy-version'] }}
 
     - name: Install Python 3
       uses: actions/setup-python@v5
