--- a/action.yaml
+++ b/action.yaml
@@ -44,32 +44,24 @@ inputs:
 runs:
   using: "composite"
   steps:
-
-    - name: Run the scan
+    - name: Debug env
+      run: env
       shell: bash
-      run: |
-        export INPUT_TARGET=${{ inputs.target }}
-        export INPUT_FORMAT=${{ inputs.format }}
-        export INPUT_OUTPUT_DIR=${{ inputs.output_dir }}
-        export INPUT_VULN_REPORT=${{ inputs.vuln_report }}
-        export INPUT_GRYPE_VERSION=${{ inputs['grype-version'] }}
-        export INPUT_SYFT_VERSION=${{ inputs['syft-version'] }}
-        export INPUT_TRIVY_VERSION=${{ inputs['trivy-version'] }}
-        python3 ${{ github.action_path }}/src/main.py
-
+      if: secrets.ACTIONS_STEP_DEBUG
     - name: Install Python 3
       uses: actions/setup-python@v5
       with:
         python-version: "3.10"
+        cache: "pip"
 
     - name: Install python deps
       shell: bash
       run: |
-        python3.10 -m pip install -r ${{ github.action_path }}/requirements.txt
+        pip install -r ${{ github.action_path }}/requirements.txt
 
     - name: Install dependencies
       shell: bash
-      run: | 
+      run: |
           export DEBIAN_FRONTEND=noninteractive && \
           sudo apt-get update && \
           sudo apt-get install --no-install-recommends -y \
@@ -81,11 +73,3 @@ runs:
     - name: Run the scan
       shell: bash
       run: python3 ${{ github.action_path }}/src/main.py
-      env:
-        INPUT_TARGET: ${{ inputs.target }}
-        INPUT_FORMAT: ${{ inputs.format }}
-        INPUT_OUTPUT_DIR: ${{ inputs.output_dir }}
-        INPUT_VULN_REPORT: ${{ inputs.vuln_report }}
-        INPUT_GRYPE_VERSION: ${{ inputs.grype-version }}
-        INPUT_SYFT_VERSION: ${{ inputs.syft-version }}
-        INPUT_TRIVY_VERSION: ${{ inputs.trivy-version }}
