Fetch tags to support git describe

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -35,6 +35,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: ./
+          fetch-depth: 0
+          fetch-tags: true
 
       - name: Download artifact
         shell: bash
