--- a/action.yaml
+++ b/action.yaml
@@ -1,74 +1,91 @@
-name: "Generate sbom"
-description: "Generate sbom from git repositories"
-
+name: "Scality SBOM Action"
+description: "Creates an SBOM (Software Bill Of Materials) from your code, and artifacts."
+author: "Scality"
+branding:
+  color: blue
+  icon: shield
 inputs:
-  repo:
-    description: "repository to scan"
-    default: ${{ github.repository }}
+  grype-version:
+    description: "The version of grype to use"
     required: false
-  input_path:
-    description: "path to the repository"
-    required: true
-  output_path:
-    description: "path to store the sbom"
-    required: true
-  generate_vulnerability_report:
-    description: "generate vulnerability report"
+
+  syft-version:
+    description: "The version of syft to use"
     required: false
-    default: "false"
+
+  trivy-version:
+    description: "The version of trivy to use"
+    required: false
+
+  target:
+    description: "The target to scan"
+    required: false
+    default: "./"
+
+  format:
+    description: "The SBOM format to export"
+    required: false
+    default: "cyclonedx-json"
+
+  output-dir:
+    description: "A directory to store the SBOM"
+    required: false
+    default: "/tmp/sbom"
+
+  exclude-mediatypes:
+    description: "Exclude specific media types from the SBOM"
+    required: false
+
+  name:
+    description: "The name of the target, if not detected"
+    required: false
+
+  version:
+    description: "The version of the target, if not detected"
+    required: false
+
+  vuln-report:
+    description: "Generate vulnerability report"
+    required: false
+    default: false
+    type: boolean
 
 runs:
   using: "composite"
   steps:
+    - name: Install Python 3
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.10"
+        cache: "pip"
 
-    - name: Install deps
+    - name: Install python deps
       shell: bash
       run: |
-        export DEBIAN_FRONTEND=noninteractive && \
-        sudo apt-get update && \
-        sudo apt-get install --no-install-recommends -y \
-        git
+        pip install -r ${{ github.action_path }}/requirements.txt
 
-    - name: Install syft
+    - name: Install dependencies
       shell: bash
       run: |
-        export DEBIAN_FRONTEND=noninteractive && \
-        curl -O -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh && \
-        sudo sh install.sh -b /usr/local/bin
+          export DEBIAN_FRONTEND=noninteractive && \
+          sudo apt-get update && \
+          sudo apt-get install --no-install-recommends -y \
+          file \
+          jq \
+          p7zip-full \
+          python3-distutils
 
-    - name: Install grype
-      if: ${{ inputs.generate_vulnerability_report == 'true' }}
+    - name: Run the scan
       shell: bash
-      run: |
-        export DEBIAN_FRONTEND=noninteractive && \
-        curl -O -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh && \
-        sudo sh install.sh -b /usr/local/bin
-
-    - name: Generate sbom for python
-      shell: bash
-      run: |
-        syft --select-catalogers "python" -o cyclonedx-json=${{ inputs.output_path }}/repo_${{ inputs.repo }}\_python.json ${{ inputs.input_path }}
-
-    - name: Generate sbom for javascript
-      shell: bash
-      run: |
-        syft --select-catalogers "javascript" -o cyclonedx-json=${{ inputs.output_path }}/repo_${{ inputs.repo }}\_javascript.json ${{ inputs.input_path }}
-
-    - name: Generate sbom for go
-      shell: bash
-      run: |
-        syft --select-catalogers "go" -o cyclonedx-json=${{ inputs.output_path }}/repo_${{ inputs.repo }}\_go.json ${{ inputs.input_path }}
-
-    - name: Generate sbom for github actions
-      shell: bash
-      run: |
-        syft --select-catalogers "github-actions" -o cyclonedx-json=${{ inputs.output_path }}/repo_${{ inputs.repo }}\_github-actions.json ${{ inputs.input_path }}/.github/
-
-    - name: Generate vulnerability report
-      if: ${{ inputs.generate_vulnerability_report == 'true' }}
-      shell: bash
-      run: |
-        for i in `find ${{ inputs.output_path }} -maxdepth 1 -name "*.json"`; do
-          grype $i -o template -t templates/html-table.tmpl > ${{ inputs.output_path }}/$i\_vulnerabilities.html
-          grype $i -o json > ${{ inputs.output_path }}/$i\_vulnerabilities.json
-        done
+      env:
+        GRYPE_VERSION: ${{ inputs.grype-version }}
+        SYFT_VERSION: ${{ inputs.syft-version }}
+        TRIVY_VERSION: ${{ inputs.trivy-version }}
+        TARGET: ${{ inputs.target }}
+        FORMAT: ${{ inputs.format }}
+        OUTPUT_DIR: ${{ inputs.output-dir }}
+        EXCLUDE_MEDIATYPES: ${{ inputs.exclude-mediatypes }}
+        NAME: ${{ inputs.name }}
+        VERSION: ${{ inputs.version }}
+        VULN_REPORT: ${{ inputs.vuln-report }}
+      run: python3 ${{ github.action_path }}/src/main.py
