--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,3 +17,19 @@ updates:
         versions: ["<2.25.1"]
     reviewers:
       - "scality/metalk8s"
+
+  - package-ecosystem: "npm"
+    directory: "/tests"
+    schedule:
+      interval: "daily"
+    labels: []
+    ignore:
+      - dependency-name: "*"
+
+  - package-ecosystem: "github-actions"
+    directory: "/tests"
+    schedule:
+      interval: "daily"
+    labels: []
+    ignore:
+      - dependency-name: "*"
