--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -1,4 +1,5 @@
-name: Update Scanners
+name: "nightly"
+run-name: "Nightly tests for ${{ github.ref_name }}"
 
 on:
   schedule:
@@ -42,3 +43,35 @@ jobs:
           branch: feature/deps-update
           commit-message: ":arrow_up: Update scanner versions"
           token: ${{ steps.app-token.outputs.token }}
+
+  vuln-scan:
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          path: ./
+          fetch-depth: 0
+          fetch-tags: true
+
+      - name: Create SBOM
+        uses: anchore/sbom-action@v0
+        with:
+          path: ./
+          format: cyclonedx-json
+          output-file: "${{ github.event.repository.name }}-sbom.cdx.json"
+
+      - name: Scan SBOM
+        uses: anchore/scan-action@v6
+        id: scan
+        with:
+          sbom: "${{ github.event.repository.name }}-sbom.cdx.json"
+          output-format: sarif
+          fail-build: false
+          add-cpes-if-none: true
+          by-cve: true
+
+      - name: Upload SARIF report
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: ${{ steps.scan.outputs.sarif }}
