:bug: ubuntu 24.04 migration

--- a/action.yaml
+++ b/action.yaml
@@ -73,7 +73,7 @@ runs:
           file \
           jq \
           p7zip-full \
-          python3-distutils
+          python3-setuptools
 
     - name: Run the scan
       shell: bash
