--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,3 +28,7 @@ repos:
           - 'GitPython~=3.1.44'
           - 'pyunpack~=0.3'
           - 'patool~=4.0.0'
+          - 'click~=8.1.8'
+          - 'gitpython~=3.1.44'
+          - 'python-magic~=0.4.27'
+          - 'pydantic~=2.11.2'
