:recycle: refactor all ghaction

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/macos,python,visualstudiocode,linux,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,python,visualstudiocode,linux,windows
 
+# exclude samples
+samples/
+
 ### Linux ###
 *~
 
