--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,4 @@ repos:
           - 'gitpython~=3.1.44'
           - 'python-magic~=0.4.27'
           - 'pydantic~=2.11.2'
+          - 'pyyaml~=6.0.2'
